WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
322471
[AppKit Gestures] Some scrolls should not produce momentum
https://bugs.webkit.org/show_bug.cgi?id=322471
Summary
[AppKit Gestures] Some scrolls should not produce momentum
Abrar Rahman Protyasha
Reported
2026-08-24 22:18:34 PDT
Some scrolls are configured to not require any trailing momentum phase, so we should respect that.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-08-24 22:18:39 PDT
<
rdar://problem/185759621
>
Abrar Rahman Protyasha
Comment 2
2026-08-24 22:25:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/72374
EWS
Comment 3
2026-08-25 02:00:01 PDT
Committed
319785@main
(6937c075deee): <
https://commits.webkit.org/319785@main
> Reviewed commits have been landed. Closing PR #72374 and removing active labels.
EWS
Comment 4
2026-08-27 22:53:15 PDT
Committed
316606.547@safari-7625-branch
(b03e7b32e6fe): <
https://commits.webkit.org/316606.547@safari-7625-branch
> Reviewed commits have been landed. Closing PR #6507 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug