[AppKit Gestures] Some scrolls should not produce momentum https://bugs.webkit.org/show_bug.cgi?id=322471 rdar://185759621

Reviewed by Richard Robinson.

Certain scroll gestures are configured to not require a trailing
momentum stage. In this patch, we begin respecting that.

* Source/WebKit/UIProcess/mac/AppKitGestures/WKAppKitGestureController.mm:
(-[WKAppKitGestureController sendWheelEventForGesture:]):

Canonical link: https://commits.webkit.org/319785@main