Source/WebKit/UIProcess/mac/AppKitGestures/WKAppKitGestureController.mm
@@ -1492,6 +1492,9 @@ ALLOW_NEW_API_WITHOUT_GUARDS_END
     if (gesture.state != NSGestureRecognizerStateEnded)
         return;
 
+    if (![self supportsMomentumScroll:gesture])
+        return;
+
     auto unfilteredVelocity = velocityInView(gesture, webView.get());
 
     // Continue the scroll along the same axis the drag was locked to rather than reintroducing
